--- a/LocalRepo/index.html
+++ b/LocalRepo/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, voluptatem.</p>
-    <p>This is a new feature</p>
+    <p>This is a new feature(dropdown)</p>
 </body>
 </html>
