--- a/LocalRepo/index.html
+++ b/LocalRepo/index.html
@@ -10,6 +10,6 @@
 
     <p>This is a new feature(dropdown)</p>
 
-    <p>This is a new feature (<button)</p>
+    <p>This is a new feature (button)</p>
 
 </html>
